--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".App"
         android:theme="@style/AppTheme">
-        <activity android:name=".NewJopFragment">
-        </activity>
+
         <activity
             android:name=".LoginActivity"
             android:noHistory="true">
@@ -29,10 +29,20 @@
         </activity>
         <activity android:name=".JopListActivity">
         </activity>
-        <activity android:name=".EmpolyerJopListFragment">
-        </activity>
+
         <activity android:name=".EmployerActivity">
         </activity>
+        <service android:name=".MyWidgetRemoteViewsService"
+                 android:permission="android.permission.BIND_REMOTEVIEWS"></service>
+        <receiver android:name=".JobWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_info" />
+        </receiver>
     </application>
 
 </manifest>
