--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,13 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:11.2.0'
     compile 'com.google.android.gms:play-services-auth:11.2.0'
     compile 'com.google.firebase:firebase-storage:11.2.0'
-    compile 'com.firebaseui:firebase-ui-auth:2.3.0'
     compile 'com.google.firebase:firebase-database:11.2.0'
     compile 'com.android.support:cardview-v7:26.0.1'
     compile 'com.android.support:recyclerview-v7:26.0.1'
     compile 'com.mobsandgeeks:android-saripaar:2.0.3'
     compile 'com.android.support:design:26.0.1'
+    compile 'com.google.code.gson:gson:2.8.0'
+
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
