--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,40 +8,49 @@
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".App"
         android:theme="@style/AppTheme">
 
         <activity
             android:name=".LoginActivity"
-            android:noHistory="true">
+            android:noHistory="true"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".SignUpActivity">
+        <activity
+            android:name=".SignUpActivity"
+            android:windowSoftInputMode="adjustResize">
         </activity>
-        <activity android:name=".JopListActivity">
+        <activity android:name=".JopListActivity"
+            >
         </activity>
 
-        <activity android:name=".EmployerActivity">
+        <activity
+            android:name=".EmployerActivity"
+            android:windowSoftInputMode="adjustResize">
+
         </activity>
-        <service android:name=".MyWidgetRemoteViewsService"
-                 android:permission="android.permission.BIND_REMOTEVIEWS"></service>
+
+        <service
+            android:name=".MyWidgetRemoteViewsService"
+            android:permission="android.permission.BIND_REMOTEVIEWS"></service>
         <receiver android:name=".JobWidget">
             <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
             </intent-filter>
 
             <meta-data
                 android:name="android.appwidget.provider"
-                android:resource="@xml/widget_info" />
+                android:resource="@xml/widget_info"/>
         </receiver>
     </application>
 
